EDELIVERY-985 - classes autogenerated, custom binding, schemas moved back to WS plugin